# PureLeaf

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  Taskfile.yml  agents.md  config-example.yaml  config.yaml  go.mod  go.sum  main.go  todo.md  wails.json
.github/workflows/: ci.yml  release.yml  test.yml
apps/desktop-qml/: CMakeLists.txt  Main.qml  main.cpp
apps/desktop-qml/controller/: desktopqmlcontroller.cpp  desktopqmlcontroller.h
apps/desktop-qml/core/: appsettings.cpp  appsettings.h
apps/desktop-qml/pages/: EditorPage.qml  HomePage.qml  SettingsPage.qml
apps/desktop-qml/resources/icons/lucide/: LICENSE
apps/desktop-qml/shell/: TitleBar.qml
apps/desktop-qml/theme/: Theme.qml
apps/desktop-qml/ui/: Icon.qml  PLButton.qml  PLCard.qml  PLComboBox.qml  PLIconButton.qml  PLSpinBox.qml  PLTextField.qml
apps/desktop-qt/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
apps/desktop-qt/components/icons/: appicon.cpp  appicon.h
apps/desktop-qt/core/: appsettings.cpp  appsettings.h  navigator.cpp  navigator.h  navpage.h
apps/desktop-qt/pages/editor/: editorpage.cpp  editorpage.h
apps/desktop-qt/pages/home/: homepage.cpp  homepage.h
apps/desktop-qt/pages/settings/: settingspage.cpp  settingspage.h
apps/harmony/: build-profile.json5
apps/harmony/AppScope/: app.json5
apps/harmony/AppScope/resources/base/element/: string.json
capi/: CMakeLists.txt
capi/include/pureleaf_c/: pureleaf.h
capi/src/: pureleaf_c.cpp
cmake/: GetGitInfo.cmake
cmd/server/: main.go
core/: CMakeLists.txt
core/include/pureleaf/: database.h  diff.h  file_repo.h  file_service.h  lock_manager.h  path_util.h  platform.h  project.h  project_service.h  repo.h  storage.h  synctex.h  types.h  version.h
core/src/: database.cpp  diff.cpp  file_repo.cpp  file_service.cpp  lock_manager.cpp  path_util.cpp  project_service.cpp  repo.cpp  storage.cpp  synctex.cpp  version.cpp  version.cpp.in
docs/en/: app-architecture.md  feature-contracts.md  ui-blueprint.md
docs/zh/: app-architecture.md  feature-contracts.md  ui-blueprint.md
internal/bindings/: dto.go  environment_service.go  file_service.go  project_service.go
internal/config/: config.go
internal/database/: database.go
internal/domain/: collaborator.go  doc.go  file.go  file_revision.go  models.go  project.go  project_snapshot.go  user.go
internal/factory/: factory.go
internal/handler/: auth.go  file.go  project.go  response.go  user.go
internal/middleware/: auth.go  auth_jwt.go  cors.go  ipfilter.go
internal/model/: file.go  project.go  user.go
internal/repository/: errors.go  file_repo.go  file_revision_repo.go  project_repo.go  project_snapshot_repo.go  repository.go  user_repo.go
internal/router/: router.go
internal/service/: atomic_file.go  atomic_file_test.go  auth.go  blob_store.go  blob_store_test.go  constants.go  diff.go  diff_test.go  environment_reload_other.go  environment_reload_windows.go  file.go  file_history.go  file_service.go  file_synctex.go  latex_environment_service.go  path_guard.go  path_guard_test.go  project.go  project_lock.go  project_lock_test.go  project_service.go  synctex.go  synctex_test.go  user_service.go
internal/transport/: app.go
internal/version/: version.go
pkg/jwt/: jwt.go
pkg/log/: logger.go
pkg/password/: password.go
pkg/response/: response.go
platform/: CMakeLists.txt
platform/desktop/: CMakeLists.txt
platform/desktop/include/pureleaf/desktop/: platform.h
platform/desktop/src/: platform.cpp
scripts/: format.cmake  gen_changelog.sh  wails-dev.mjs
tests/: CMakeLists.txt  test_services.cpp  test_smoke.cpp
web/: .gitignore  .prettierrc  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts
web/bindings/github.com/kyangconn/goleaf/internal/bindings/: environmentservice.ts  fileservice.ts  index.ts  models.ts  projectservice.ts
web/src/: App.vue  main.js  main.ts  vite-env.d.ts
web/src/api/: index.js  index.ts
web/src/components/: FileTree.vue  HistoryPanel.vue  Loading.vue  PdfPreview.vue  ProjectCard.vue  ProjectList.vue  SnapshotPanel.vue  TreeNode.vue
web/src/layouts/: BaseLayout.vue
web/src/platform/: window.ts
web/src/router/: index.js  index.ts
web/src/stores/: auth.js  auth.ts  theme.ts
web/src/styles/: _mixins.scss  _variables.scss  index.scss  variables.css
web/src/views/: Dashboard.vue  Editor.vue  Home.vue  Login.vue  Register.vue  Settings.vue  Setup.vue
web/wailsjs/go/: models.ts
web/wailsjs/go/transport/: App.d.ts  App.js
